welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: ')' expected but '}' found.
if(a==b || a%10==b%10 || a%10==(b-b%10)/10 || b%10==(a-a%10)/10}
                                                               ^shareDigit:4: error: Unmatched closing brace '}' ignored here
 }
 ^