welcome.lessons.welcome.bat.bool2.ShareDigit.scala.code
def shareDigit(a:Int, b:Int):Boolean = {
if(a==b || a%10==b%10 || a%10==(b-b%10)/10 || b%10==(a-a%10)/10}
}